--- a/pages/news-detail/news-detail.wxss
+++ b/pages/news-detail/news-detail.wxss
@@ -2,10 +2,41 @@
 .container{
   padding: 30rpx
 }
-p{
-  margin: 15rpx
+.title{
+  text-align: center;
+  font-size: 50rpx
 }
-image{
+.date-source{
+  margin-top: 30rpx;
+  text-align: right
+}
+.date{
+  font-size: 28rpx;
+  color: #aaa;
+  margin-right: 20rpx
+}
+.source{
+  color: lightskyblue;
+  font-size: 28rpx
+}
+.read-count{
+  text-align: right;
+  font-size: 30rpx;
+  color: lightgrey;
+  margin-bottom: 30rpx
+
+}
+.news-detail-content{
+  border-top: 1px dashed lightgray
+}
+.news-detail-content .content-text, text{
+  margin: 30rpx;
+  color: #666;
+  font-size: 28rpx;
+  text-indent: 56rpx;
+}
+.news-detail-content 
+.news-detail-content image{
   display: block;
   width: 90%;
   margin: 30rpx auto
