index: add default image for news item

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -24,7 +24,7 @@
         <text class="news-title">{{item.title}}</text>
         <view class="news-date">{{item.formatedDate}}</view>
       </view>
-      <image class="news-item-image" src="{{item.firstImage}}"></image>
+      <image class="news-item-image" src="{{item.image}}"></image>
     </view>
   </view>
 
