--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -24,7 +24,11 @@
         <text class="news-title">{{item.title}}</text>
         <view class="news-date">{{item.formatedDate}}</view>
       </view>
-      <image class="news-item-image" src="{{item.image}}"></image>
+      <image
+        class="news-item-image"
+        src="{{item.image}}"
+        mode="aspectFill"
+      />
     </view>
   </view>
 
